Take into account that a NULL value will prevent a UNIQUE restriction taking effect. 1) In ImageComments, treat an empty author like a null author 2) When upgrading - there will still be users upgrading from 0.9, work around it    by deleting all affected entries before upgrading the image comments from the old db

Users already affected by this bug need to solve it manually as outlined in the bug report.

BUG: 189080

svn path=/trunk/extragear/graphics/digikam/; revision=991767